event page edited

--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -2,6 +2,7 @@
   <ion-navbar>
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
+      <ion-icon name="star"></ion-icon>
     </button>
     <ion-title>Presentación evento</ion-title>
   </ion-navbar>
@@ -9,5 +10,9 @@
 
 
 <ion-content padding>
-
+    <h1 text-center>Bienvenid@ al congreso internacional</h1>
+    <img width="100%" height="auto" src="assets/imgs/img1event.jpg" />
+    <h4 text-justify style="color:darkGray">Te agradecemos el uso de esta aplicación durante la celebración del evento. Ponemos a tu disposición toda la información
+    genérica a través del menú izquierdo. Asimismo, las opciones de geolocalización que incorpora nos permiten comunicar contigo
+    de forma personalizada en función de tus necesidades específicas.</h4>
 </ion-content>
