added video plugins and demo

--- a/src/pages/documentation/documentation.html
+++ b/src/pages/documentation/documentation.html
@@ -25,6 +25,10 @@
         <div text-center>
           <button ion-button color="success-color" (click)="download()">Download and open</button>
         </div>
+<!-- 
+        <div text-center>
+          <button ion-button color="success-color" (click)="openFromAssets()">Open from app (no download)</button>
+        </div> -->
 
     
 
