--- a/src/pages/video/video.html
+++ b/src/pages/video/video.html
@@ -10,4 +10,12 @@
 
 <ion-content padding>
 
+    <div text-center>
+      <button ion-button color="danger-color" (click)="youtubeVideo()">Youtube Video</button>
+    </div>
+
+    <div text-center>
+      <button ion-button color="warning-color" (click)="mp4Video()">Local mp4 Video</button>
+    </div>
+
 </ion-content>
