push demo y charts demo

--- a/src/pages/notifications/notifications.html
+++ b/src/pages/notifications/notifications.html
@@ -13,7 +13,10 @@
 
 <ion-content>
     <div text-center>
-      <button ion-button color="success-color" (click)="openLocalNotification()">Notificación Local</button>
+      <button ion-button color="warning-color" (click)="openLocalNotification()">Notificación Local</button>
+    </div>
+    <div text-center>
+      <button ion-button color="success-color" (click)="openPushNotification()">Notificación Push</button>
     </div>
 
 </ion-content>
