new pages and views and others

--- a/src/pages/administracion/administracion.html
+++ b/src/pages/administracion/administracion.html
@@ -4,10 +4,10 @@
           <ion-icon name="menu"></ion-icon>
         </button>
     <ion-title>Panel de administración</ion-title>
-    <ion-buttons start>
-      <button ion-button (click)="cerrarPaginaAdministracion()">
+    <ion-buttons right>
+      <!-- <button ion-button (click)="cerrarPaginaAdministracion()">
         <ion-icon name="md-close"></ion-icon>
-      </button>
+      </button> -->
     </ion-buttons>
   </ion-navbar>
 </ion-header>
@@ -183,8 +183,8 @@
   </div>
 
   <!--Botón flotante-->
-  <ion-fab right top edge style="padding-right: 20px">
-    <button ion-fab color="dark">
+  <ion-fab right top edge>
+    <button ion-fab color="danger">
       <ion-icon name="add"></ion-icon>
     </button>
     <ion-fab-list>
