--- a/src/pages/video/video.html
+++ b/src/pages/video/video.html
@@ -18,4 +18,9 @@
       <button ion-button color="warning-color" (click)="mp4Video()">Local mp4 Video</button>
     </div>
 
+    <div text-center>
+      <iframe width="100%" height="auto" src="https://www.youtube.com/embed/d5POkffRHiI?rel=0" frameborder="0" 
+      gesture="media" allow="encrypted-media" allowfullscreen></iframe>
+    </div>
+
 </ion-content>
